--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "build:types": "tsc --emitDeclarationOnly",
     "build:js": "rollup -c",
     "build:demo": "rollup -c rollup.config.demo.js && cp demo/index.html public-dist/index.html",
-    "prepare": "npm run prepare:cdda",
-    "prepare:cdda": "zx scripts/downloadCDDAMods.mjs",
+    "prepare": "npm run prepare:download",
+    "prepare:download": "zx scripts/downloadCDDAMods.mjs",
+    "prepare:extract": "zx scripts/extractData.mjs",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepublishOnly": "npm run clean && npm run build",
+    "prepublishOnly": "npm run clean && npm run prepare:extract && npm run build",
     "clean": "rimraf dist",
     "installType": "typesync"
   },
@@ -41,7 +42,6 @@
     "@babel/cli": "^7.15.7",
     "@babel/core": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
-    "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^15.0.0",
@@ -49,9 +49,9 @@
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@rollup/plugin-replace": "^3.0.0",
     "@rollup/plugin-typescript": "^8.2.5",
-    "@types/babel-plugin-macros": "^2.8.5",
     "@types/babel__core": "^7.1.16",
     "@types/babel__preset-env": "^7.9.2",
+    "@types/babel-plugin-macros": "^2.8.5",
     "@types/eslint": "7.28.2",
     "@types/eslint-plugin-prettier": "3.1.0",
     "@types/lodash": "4.14.176",
@@ -81,8 +81,8 @@
     "eslint-plugin-security-node": "1.0.14",
     "eslint-plugin-typescript-sort-keys": "2.0.0",
     "eslint-plugin-unicorn": "37.0.1",
-    "fs-jetpack": "^4.2.0",
     "node-fetch": "^3.0.0",
+    "pofile": "^1.1.1",
     "prettier": "^2.4.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.27.1",
